# pybench

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
docs/: result-schema.md
modules/: cpu_benchmark.py  disk_benchmark.py  gpu_benchmark.py  memory_benchmark.py
monitor/: aggregator.py  system_monitor.py
reporter/: exporter.py
scoring/: scorer.py
ui/: dashboard.py  formatter.py  results_view.py
